tests/baselines/reference/interfaceWithPropertyThatIsPrivateInBaseType.errors.txt
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithPropertyThatIsPrivateInBaseType.ts(5,11): error TS2429: Interface 'Foo' incorrectly extends interface 'Base':
  Private property 'x' cannot be reimplemented.
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithPropertyThatIsPrivateInBaseType.ts(13,11): error TS2429: Interface 'Foo2<T>' incorrectly extends interface 'Base2<T>':
  Private property 'x' cannot be reimplemented.


==== tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithPropertyThatIsPrivateInBaseType.ts (2 errors) ====
    class Base {
        private x: number;
    }
    
    interface Foo extends Base { // error
              ~~~
!!! error TS2429: Interface 'Foo' incorrectly extends interface 'Base':
!!! error TS2429:   Private property 'x' cannot be reimplemented.
        x: number;
    }
    
    class Base2<T> {
        private x: T;
    }
    
    interface Foo2<T> extends Base2<T> { // error
              ~~~~
!!! error TS2429: Interface 'Foo2<T>' incorrectly extends interface 'Base2<T>':
!!! error TS2429:   Private property 'x' cannot be reimplemented.
        x: number;
    }